main/assets/css/pages/_index.scss
// ++++++++++++++++++++
// ++ HEADER SECTION ++
// ++++++++++++++++++++

header {
  margin-top: var(--nav-height); //move content down for fixed menu
  color: var(--color-white);

  .container {
    width: 100%; //fill full width of screen for mobile sizes
  }

  .hero {
    background: url(../images/home/desktop/bg-pattern-hero-home.svg) no-repeat, var(--color-primary);
    background-position: left top 5.5rem;
    background-size: 180%;
    overflow: hidden;
    padding: 5rem 0 27rem;
    position: relative;

    &__article {
      display: grid;
      justify-items: center;
      --text-vspace-multiplier: 2.5; //controls the vertical rhythm
      h1 {
        max-width: 20ch;
      }
      p {
        max-width: 35ch;
      }
    }

    &__image {
      position: absolute;
      bottom: -45%;
      right: 50%;
      transform: translateX(50%);
      width: 39rem; //set the image width since it is the same size on all screens
    }
  }

  @include breakpoint(sm) {
    margin-top: initial; //remove margin used for menu when menu was fixed;

     .container {
      width: var(--container-width); //control the size of the container
     }

    .hero {
      background-position: right -7.5rem top 6.25rem;
      background-size: 90%;
      border-radius: var(--radius);
      padding-top: 3.75rem;

      &__article {
         --text-vspace-multiplier: 1.8; //controls the vertical rhythm
        p {
          max-width: 46ch;
        }
      }
    }

  }

  @include breakpoint(md) {
    .hero {
      --image-padding: 10.75rem;
      --hero-padding-y: 9.0625rem;
      --hero-padding-x: 6rem;

      background-position: right top;
      background-size: 55%;

      border-radius: var(--radius);
      padding: var(--hero-padding-y) var(--hero-padding-x);

      &__article {
        justify-items: start;
      }

      &__image {
        top: calc(var(--hero-padding-y) - var(--image-padding));
        right: calc(var(--hero-padding-x) - var(--image-padding));
        transform: translateX(0%);
      }
    }

  }
}

main {
  display: grid;
  margin-top: var(--space-xxxl);
  gap: var(--space-xxxl);
}

// +++++++++++++++++
// ++ IMAGE CARDS ++
// +++++++++++++++++

.image-cards {
  display: grid;
  grid-auto-columns: 1fr;
  grid-auto-rows: 15.625rem;
  grid-template-areas:
    'web'
    'app'
    'design';
  gap: 24px;

  @include breakpoint(sm) {
     grid-auto-rows: 12.5rem;
  }

  @include breakpoint(md) {
    grid-auto-columns: 1fr;
    grid-template-rows: repeat(2, 19.25rem);
    grid-template-areas:
      'web app'
      'web design';
    gap: 30px;
  }


  #image-card-web {
    --card-bg-image: url(../images/home/desktop/image-web-design-large.jpg);
    background-position: center bottom;
    grid-area: web;
  }

  #image-card-app {
    --card-bg-image: url(../images/home/desktop/image-app-design.jpg);
    grid-area: app;
  }

  #image-card-design {
    --card-bg-image: url(../images/home/desktop/image-graphic-design.jpg);
    grid-area: design;
  }
}

